Refactor index.html for live streaming layout
Updated the HTML structure and styling for a live streaming interface, including changes to the layout, user display, and controls.

--- a/index.html
+++ b/index.html
@@ -1,337 +1,309 @@
-<!doctype html>
-<html lang="ar">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Live Overlay — Demo</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>KALAL_Y Live</title>
+
 <style>
-  :root{ --red:#c92b2b; --white:#fff }
-  html,body{height:100%;margin:0;background:#000;color:var(--white);font-family:Arial,system-ui;overflow:hidden}
-  /* video + canvas */
-  #video{position:fixed;inset:0;width:100%;height:100%;object-fit:cover;z-index:1}
-  #canvas{position:fixed;inset:0;width:100%;height:100%;z-index:2;pointer-events:none}
-  /* visual overlay (not recorded, for UX) */
-  .top-left{position:fixed;left:18px;top:18px;z-index:4;pointer-events:none;direction:rtl}
-  .user-row{display:flex;align-items:center;gap:12px;flex-direction:row-reverse}
-  .user-row img{height:52px;width:auto;display:block;border-radius:6px}
-  .username{font-weight:700;font-size:30px;letter-spacing:1px;margin-left:6px}
-  .viewers-row{display:flex;align-items:center;gap:10px;margin-top:12px;font-size:20px}
-  .viewers-row img{height:28px;width:auto;display:block}
-  /* comments area (visual DOM only) */
-  .comments-visual{margin-top:22px;font-size:18px;line-height:1.4;max-width:55vw;text-align:left;direction:rtl;opacity:0.95}
-  /* top-right LIVE DOM (visual), but we also draw on canvas for recording */
-  .top-right{position:fixed;right:18px;top:18px;z-index:4;pointer-events:none}
-  .live-badge{display:inline-block;background:var(--red);color:var(--white);padding:10px 18px;border-radius:24px;font-weight:700;font-size:15px;box-shadow:0 6px 18px rgba(0,0,0,.5)}
-  .hidden{display:none!important}
-  .controls{position:fixed;left:0;right:0;bottom:26px;display:flex;justify-content:center;gap:48px;z-index:4;pointer-events:auto}
-  .control-btn{width:84px;height:84px;display:flex;align-items:center;justify-content:center;border-radius:999px;border:2px solid rgba(255,255,255,0.12);background:rgba(255,255,255,0.02);cursor:pointer}
-  .control-btn img{max-width:70%;max-height:70%}
-  @media(min-width:900px){ .user-row img{height:70px}.username{font-size:42px} }
+    body, html {
+        margin: 0;
+        padding: 0;
+        background: black;
+        overflow: hidden;
+        font-family: sans-serif;
+        color: white;
+    }
+
+    #video {
+        position: fixed;
+        top: 0; left: 0;
+        width: 100vw;
+        height: 100vh;
+        object-fit: cover;
+        z-index: 1;
+    }
+
+    /* ============================
+       TOP LEFT USER + VIEWERS
+       ============================ */
+    #userBox {
+        position: fixed;
+        top: 60px;
+        left: 20px;
+        z-index: 5;
+    }
+
+    #userRow {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    #kalalIcon {
+        height: 32px;
+    }
+
+    #userName {
+        font-size: 26px;
+        font-weight: 600;
+    }
+
+    #viewersRow {
+        margin-top: 12px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    #eyeIcon {
+        height: 24px;
+    }
+
+    #viewersText {
+        font-size: 20px;
+        opacity: 0.9;
+    }
+
+    /* ============================
+       LIVE STREAMING BADGE
+       ============================ */
+    #liveBadge {
+        position: fixed;
+        top: 60px;
+        right: 20px;
+        background: #c62828;
+        padding: 10px 22px;
+        border-radius: 18px;
+        font-size: 18px;
+        font-weight: 600;
+        display: none;
+        z-index: 5;
+    }
+
+    /* ============================
+       COMMENTS BOTTOM LEFT
+       ============================ */
+    #commentsBox {
+        position: fixed;
+        bottom: 150px;
+        left: 20px;
+        width: 80%;
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 10px;
+        z-index: 5;
+        font-size: 20px;
+        line-height: 22px;
+    }
+
+    /* ============================
+       BOTTOM ICONS (NO CIRCLES)
+       ============================ */
+    #bottomBar {
+        position: fixed;
+        bottom: 40px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 70px;
+        z-index: 5;
+    }
+
+    .iconBtn {
+        background: none;
+        border: none;
+        padding: 0;
+    }
+
+    .iconImg {
+        height: 52px;  /* Ajuste perfecto para tu diseño */
+    }
+
 </style>
 </head>
+
 <body>
 
+<!-- VIDEO -->
 <video id="video" autoplay playsinline muted></video>
-<canvas id="canvas" aria-hidden="true"></canvas>
 
-<!-- VISUAL TOP LEFT (for user) -->
-<div class="top-left" aria-hidden="true">
-  <div class="user-row">
-    <img id="imgUser" src="icons/KALAL.png" alt="KALAL">
-    <div class="username">KALAL_Y</div>
-  </div>
-  <div class="viewers-row" style="margin-top:8px;">
-    <img id="imgEye" src="icons/EYE.png" alt="viewers">
-    <div id="viewersText">50,604 viewers</div>
-  </div>
-  <div class="comments-visual" id="commentsVisual" style="white-space:pre-line"></div>
+<!-- USER + VIEWERS -->
+<div id="userBox">
+    <div id="userRow">
+        <img id="kalalIcon" src="icons/KALAL.png">
+        <div id="userName">KALAL_Y</div>
+    </div>
+
+    <div id="viewersRow">
+        <img id="eyeIcon" src="icons/OJO VIEWERS.png">
+        <div id="viewersText">50,604 viewers</div>
+    </div>
 </div>
 
-<!-- VISUAL TOP RIGHT -->
-<div class="top-right" aria-hidden="true">
-  <div id="liveDom" class="live-badge hidden">LIVE STREAMING</div>
-</div>
+<!-- LIVE -->
+<div id="liveBadge">LIVE STREAMING</div>
 
-<!-- CONTROLS -->
-<div class="controls" role="group" aria-label="controls">
-  <button id="btnRec" class="control-btn" title="Record"><img src="icons/REC.png" alt="rec"></button>
-  <button id="btnSwitch" class="control-btn" title="Switch camera"><img src="icons/CAM.png" alt="switch"></button>
-  <button id="btnLike" class="control-btn" title="Like"><img src="icons/HEART.png" alt="heart"></button>
+<!-- COMMENTS -->
+<div id="commentsBox"></div>
+
+<!-- BOTTOM BUTTONS -->
+<div id="bottomBar">
+    <button id="recBtn" class="iconBtn">
+        <img class="iconImg" src="icons/REC.png">
+    </button>
+
+    <button id="camBtn" class="iconBtn">
+        <img class="iconImg" src="icons/CAMBIO CÁMARA.png">
+    </button>
+
+    <button id="likeBtn" class="iconBtn">
+        <img class="iconImg" src="icons/CORAZÓN.png">
+    </button>
 </div>
 
 <script>
-/* ---------- CONFIG ---------- */
-const FPS = 30;
-const MAX_COMMENTS = 6;
-const COMMENT_INTERVAL_MIN = 3000; // 3s
-const COMMENT_INTERVAL_MAX = 4000; // 4s
-
-/* ---------- ELEMENTS ---------- */
-const video = document.getElementById('video');
-const canvas = document.getElementById('canvas');
-const ctx = canvas.getContext('2d');
-
-const imgUser = document.getElementById('imgUser');
-const imgEye = document.getElementById('imgEye');
-const liveDom = document.getElementById('liveDom');
-
-const viewersText = document.getElementById('viewersText');
-const commentsVisual = document.getElementById('commentsVisual');
-
-const btnRec = document.getElementById('btnRec');
-const btnSwitch = document.getElementById('btnSwitch');
-const btnLike = document.getElementById('btnLike');
-
-/* ---------- STATE ---------- */
+/* ==========================================================
+   CAMERA INITIALIZATION
+   ========================================================== */
 let usingFront = false;
-let mediaStream = null;
+let stream = null;
 let recorder = null;
-let recordedChunks = [];
-let recording = false;
-let viewers = 50604;
-let comments = [];
+let chunks = [];
 
-/* Arabic neutral comments + Arabic-style usernames */
-const arabicNames = ['ahmad','sara','nour','rania','amir','laila','omar','fatima','khaled','hana','yasmine','ibrahim'];
-const arabicMessages = [
-  'رائع! 🔥',
-  'ممتاز جدا',
-  'استمر! 👏',
-  'جميل جدا',
-  'أداء رائع',
-  'أحسنت 👍',
-  'واو! 😍',
-  'مستوى جميل',
-  'نحن معك',
-  'فكرة جميلة',
-  'أحب هذا! ❤️',
-  'ممتاز 👌',
-  'رهيب 🔥',
-  'جميل!'
-];
+/* DOM */
+const video = document.getElementById("video");
+const commentsBox = document.getElementById("commentsBox");
+const liveBadge = document.getElementById("liveBadge");
+const viewersText = document.getElementById("viewersText");
 
-/* ---------- CAMERA (with audio echo cancellation) ---------- */
+/* ==========================================================
+   START CAMERA
+   ========================================================== */
 async function startCamera() {
-  try {
-    if (mediaStream) mediaStream.getTracks().forEach(t=>t.stop());
-    const constraints = {
-      video: { facingMode: usingFront ? 'user' : 'environment', width:{ideal:1280}, height:{ideal:720} },
-      audio: { echoCancellation:true, noiseSuppression:true }
-    };
-    mediaStream = await navigator.mediaDevices.getUserMedia(constraints);
-    video.srcObject = mediaStream;
-    video.muted = true; // do not play mic to speakers to avoid echo
-    await video.play();
-    resizeCanvas();
-  } catch (e) {
-    console.error('camera error', e);
-    alert('Permite cámara/micrófono y recarga la página');
-  }
+    if (stream) stream.getTracks().forEach(t => t.stop());
+
+    stream = await navigator.mediaDevices.getUserMedia({
+        video: {
+            facingMode: usingFront ? "user" : "environment",
+            width: { ideal: 1920 },
+            height: { ideal: 1080 }
+        },
+        audio: {
+            echoCancellation: true,
+            noiseSuppression: true
+        }
+    });
+
+    video.srcObject = stream;
 }
 startCamera();
 
-/* ---------- RESIZE ---------- */
-function resizeCanvas(){
-  const w = video.videoWidth || window.innerWidth;
-  const h = video.videoHeight || window.innerHeight;
-  canvas.width = w;
-  canvas.height = h;
-  canvas.style.width = '100%';
-  canvas.style.height = '100%';
-}
+/* CAMERA SWITCH */
+document.getElementById("camBtn").onclick = () => {
+    usingFront = !usingFront;
+    startCamera();
+};
 
-/* ---------- DRAW LOOP: draw video + overlays on canvas (what will be recorded) ---------- */
-function draw() {
-  if (video.readyState >= 2) {
-    ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-
-    // draw user icon & name (top-left, RTL visual)
-    if (imgUser && imgUser.complete) ctx.drawImage(imgUser, 40, 40, 70, 70);
-    ctx.fillStyle = '#fff';
-    ctx.font = `${Math.round(canvas.width * 0.03)}px Arial`;
-    ctx.textBaseline = 'middle';
-    ctx.direction = 'rtl';
-    // draw username slightly to the right of the icon
-    ctx.fillText('KALAL_Y', 125, 75);
-
-    // draw viewers below user
-    if (imgEye && imgEye.complete) ctx.drawImage(imgEye, 40, 140, 36, 36);
-    ctx.font = `${Math.round(canvas.width * 0.022)}px Arial`;
-    ctx.fillText(viewers.toLocaleString() + ' viewers', 86, 160);
-
-    // draw comments (bottom-left area, stacked upwards)
-    ctx.font = `${Math.round(canvas.width * 0.02)}px Arial`;
-    ctx.fillStyle = '#fff';
-    ctx.textBaseline = 'alphabetic';
-    ctx.direction = 'rtl';
-    const paddingLeft = 40;
-    const lineHeight = Math.round(canvas.width * 0.035); // increased spacing
-    // start from bottom-left margin
-    let startY = canvas.height - 60;
-    const toDraw = comments.slice(-MAX_COMMENTS).reverse(); // newest at bottom
-    for (let i = 0; i < toDraw.length; i++) {
-      const txt = `${toDraw[i].user}: ${toDraw[i].text}`;
-      ctx.fillText(txt, paddingLeft, startY - (i * lineHeight));
-    }
-
-    // draw LIVE badge top-right if recording (and blink by opacity)
-    if (recording) {
-      const bw = Math.round(canvas.width * 0.28);
-      const bh = Math.round(canvas.width * 0.06);
-      const bx = canvas.width - bw - 40;
-      const by = 40;
-      // blinking via globalAlpha toggled by time
-      const t = Date.now();
-      ctx.save();
-      ctx.globalAlpha = (Math.floor(t/600) % 2) ? 1 : 0.25;
-      ctx.fillStyle = 'rgba(201,43,43,1)';
-      roundRect(ctx, bx, by, bw, bh, bh/2, true, false);
-      ctx.fillStyle = '#fff';
-      ctx.font = `${Math.round(canvas.width * 0.02)}px Arial`;
-      ctx.textAlign = 'center';
-      ctx.fillText('LIVE STREAMING', bx + bw/2, by + bh/2 + 2);
-      ctx.restore();
-      ctx.textAlign = 'start';
-    }
-  }
-  requestAnimationFrame(draw);
-}
-
-/* rounded rectangle helper */
-function roundRect(ctx,x,y,w,h,r,fill,stroke){
-  if(typeof r==='undefined') r=5;
-  ctx.beginPath();
-  ctx.moveTo(x+r,y);
-  ctx.arcTo(x+w,y,x+w,y+h,r);
-  ctx.arcTo(x+w,y+h,x,y+h,r);
-  ctx.arcTo(x,y+h,x,y,r);
-  ctx.arcTo(x,y,x+w,y,r);
-  ctx.closePath();
-  if(fill) ctx.fill();
-  if(stroke) ctx.stroke();
-}
-
-/* ---------- Simulate viewers & Arabic comments (A: slow 3-4s) ---------- */
+/* ==========================================================
+   VIEWERS INCREASING
+   ========================================================== */
+let viewers = 50604;
 setInterval(() => {
-  viewers = Math.floor(viewers * (1 + (Math.random()*0.02 + 0.005)));
-  viewersText.innerText = viewers.toLocaleString() + ' viewers';
+    viewers = Math.floor(viewers * 1.015);
+    viewersText.textContent = viewers.toLocaleString() + " viewers";
 }, 2000);
 
-function pushRandomArabicComment(){
-  const name = arabicNames[Math.floor(Math.random()*arabicNames.length)] + Math.floor(Math.random()*90);
-  const msg = arabicMessages[Math.floor(Math.random()*arabicMessages.length)];
-  comments.push({user: name, text: msg});
-  // update visual box
-  commentsVisual.innerText = comments.slice(-MAX_COMMENTS).map(c => `${c.user}: ${c.text}`).reverse().join('\n');
+
+/* ==========================================================
+   COMMENTS SYSTEM (BOTTOM LEFT)
+   ========================================================== */
+
+const arabicNames = [
+    "فهد", "سيف", "كريم", "نور", "مروان", "آدم",
+    "ليلى", "سارة", "علي", "ياسين"
+];
+
+const arabicMsgs = [
+    "جيد جدًا 👍",
+    "🔥🔥 استمر",
+    "أداء ممتاز 👍",
+    "أنت رائع 🔥",
+    "استمر يا بطل 👍"
+];
+
+function addComment() {
+    const name = arabicNames[Math.floor(Math.random() * arabicNames.length)];
+    const msg = arabicMsgs[Math.floor(Math.random() * arabicMsgs.length)];
+
+    const div = document.createElement("div");
+    div.textContent = `${name}: ${msg}`;
+    commentsBox.appendChild(div);
+
+    if (commentsBox.children.length > 5) {
+        commentsBox.removeChild(commentsBox.children[0]);
+    }
 }
 
-// start comments slowly (3-4s)
-function startArabicComments(){
-  function tick(){
-    pushRandomArabicComment();
-    const delay = COMMENT_INTERVAL_MIN + Math.floor(Math.random() * (COMMENT_INTERVAL_MAX - COMMENT_INTERVAL_MIN));
-    setTimeout(tick, delay);
-  }
-  setTimeout(tick, 1200);
-}
-startArabicComments();
+setInterval(addComment, 1600);
 
-/* ---------- Recording: capture canvas (video) + mic (audio) ---------- */
-async function startRecording() {
-  if (!mediaStream) { alert('Cámara no lista. Espera unos segundos.'); return; }
-  resizeCanvas(); // ensure correct size
 
-  // canvas video stream
-  const canvasStream = canvas.captureStream(FPS);
+/* ==========================================================
+   RECORDING + LIVE BLINK
+   ========================================================== */
 
-  // mixed stream: take video from canvas + audio from camera
-  const mixed = new MediaStream();
-  canvasStream.getVideoTracks().forEach(t => mixed.addTrack(t));
-  // add microphone audio tracks if present
-  if (mediaStream.getAudioTracks().length) {
-    mediaStream.getAudioTracks().forEach(t => mixed.addTrack(t));
-  }
+let recording = false;
+let blinkState = true;
 
-  recordedChunks = [];
-  const options = { mimeType: 'video/webm;codecs=vp9' };
-  try {
-    recorder = new MediaRecorder(mixed, options);
-  } catch (e) {
-    recorder = new MediaRecorder(mixed);
-  }
+document.getElementById("recBtn").onclick = () => {
+    if (!recording) startRecording();
+    else stopRecording();
+};
 
-  recorder.ondataavailable = e => { if (e.data && e.data.size) recordedChunks.push(e.data); };
-  recorder.onstop = onStopHandler;
-  recorder.start(1000); // gather in 1s blobs
+function startRecording() {
+    chunks = [];
+    const canvas = new OffscreenCanvas(video.videoWidth, video.videoHeight);
+    const ctx = canvas.getContext("2d");
 
-  // UI states
-  recording = true;
-  liveDom.classList.remove('hidden');
-  // also show DOM visual blink via class toggling
-  liveDom.classList.add('blink');
+    function draw() {
+        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+        requestAnimationFrame(draw);
+    }
+    draw();
+
+    const streamCanvas = canvas.captureStream(30);
+
+    recorder = new MediaRecorder(streamCanvas, { mimeType: "video/webm" });
+    recorder.ondataavailable = e => { if (e.data.size > 0) chunks.push(e.data); };
+
+    recorder.onstop = () => {
+        const blob = new Blob(chunks, { type: "video/webm" });
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement("a");
+        a.href = url;
+        a.download = "live.mp4";
+        a.click();
+        URL.revokeObjectURL(url);
+    };
+
+    recorder.start();
+    recording = true;
+    blinkLive();
 }
 
 function stopRecording() {
-  if (recorder && recorder.state !== 'inactive') recorder.stop();
-  recording = false;
-  liveDom.classList.remove('blink');
-  liveDom.classList.add('hidden');
+    recording = false;
+    liveBadge.style.display = "none";
+    recorder.stop();
 }
 
-function onStopHandler() {
-  const blob = new Blob(recordedChunks, { type: 'video/webm' });
-  const url = URL.createObjectURL(blob);
-  const a = document.createElement('a');
-  a.href = url;
-  a.download = 'stream_recording.webm';
-  document.body.appendChild(a);
-  a.click();
-  a.remove();
-  setTimeout(()=>URL.revokeObjectURL(url), 5000);
+function blinkLive() {
+    if (!recording) return;
+    liveBadge.style.display = blinkState ? "block" : "none";
+    blinkState = !blinkState;
+    setTimeout(blinkLive, 600);
 }
-
-/* ---------- Buttons ---------- */
-btnSwitch.addEventListener('click', async () => {
-  usingFront = !usingFront;
-  await startCamera();
-});
-
-btnRec.addEventListener('click', () => {
-  if (!recording) startRecording();
-  else stopRecording();
-});
-
-btnLike.addEventListener('click', () => {
-  // small visual feedback as arabic heart message
-  comments.push({user: 'you', text: '❤️'});
-  commentsVisual.innerText = comments.slice(-MAX_COMMENTS).map(c => `${c.user}: ${c.text}`).reverse().join('\n');
-});
-
-/* ---------- Boot ---------- */
-video.addEventListener('loadedmetadata', resizeCanvas);
-window.addEventListener('resize', resizeCanvas);
-draw(); // start draw loop
-
-/* ---------- ICON CHECK (warn missing icons) ---------- */
-function checkIcons(){
-  const imgs = [
-    {el:imgUser, path:'icons/KALAL.png'},
-    {el:imgEye, path:'icons/EYE.png'},
-    {el:btnRec, path:'icons/REC.png'},
-    {el:btnSwitch, path:'icons/CAM.png'},
-    {el:btnLike, path:'icons/HEART.png'},
-  ];
-  imgs.forEach(o=>{
-    const i = new Image();
-    i.onload = ()=>{};
-    i.onerror = ()=> {
-      console.warn('Missing icon:', o.path);
-      if (o.el) o.el.style.opacity = '0.25';
-    };
-    i.src = o.path;
-  });
-}
-setTimeout(checkIcons, 1000);
 
 </script>
 </body>
